# daily-todo

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.ts
.claude/prompts/: ui-overhaul-v1.md
.github/workflows/: release-macos.yml
docs/: macos-personal-release.md  pocketbase.md
scripts/: apply-pocketbase-schema.mjs  sync-app-version.mjs
scripts/lib/: pocketbase-schema.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: app-context.test.tsx  app-context.tsx  auth-context.test.tsx  auth-context.tsx  auth-gate.test.tsx  auth-gate.tsx  daily-view.test.tsx  daily-view.tsx  desktop-update-provider.test.tsx  desktop-update-provider.tsx  drawing-overlay.test.tsx  drawing-overlay.tsx  markdown-editor.test.tsx  markdown-editor.tsx  notes-view.test.tsx  notes-view.tsx  password-reset-screen.test.tsx  password-reset-screen.tsx  planner-view.test.tsx  planner-view.tsx  providers.tsx  sidebar.test.tsx  sidebar.tsx  todos-view.test.tsx  todos-view.tsx  top-navbar.test.tsx  top-navbar.tsx  verification-pending-screen.tsx  workspace.test.tsx  workspace.tsx
src/lib/: auth-config.ts  auth.ts  confetti.ts  date.ts  dev-mode.ts  image.ts  local-cache-storage.ts  persistence.test.ts  persistence.ts  pocketbase-schema-admin.test.ts  recent-note-bodies-storage.ts  schema.ts  snapshot-persistence-repository.ts  split-persistence-repository.ts  store.test.ts  store.ts  (+3 more)
(+22 files in other folders)
