[package]
name = "dailytodoapp"
version = "0.1.0"
description = "DailyTodoApp desktop shell"
authors = ["Ali Hayder"]
edition = "2021"

[lib]
name = "dailytodoapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
