[package]
name = "dailytodoapp"
version = "2026.3.5"
description = "DailyTodo desktop shell"
authors = ["Ali Hayder"]
edition = "2021"

[lib]
name = "dailytodoapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.0"
